* marks an incompatible change

  o [prover] support for Z3 4.3.*
  o [prover] fixed Coq 8.4 support for theory real.Trigonometry
  o [prover] support for CVC4
  o [prover] support for mathematica
  o [prover] support for MathSAT5

version 0.80, Oct 31, 2012
==========================
  * [whyml] modified syntax for mlw programs; a summary of changes is
    given in Appendix A of the manual
  o [whyml] support for type invariants and ghost code
  o [api] Ocaml interfaces for constructing program modules
  o [transformation] experimental support for induction on integers
    and on algebraic types
  o [interface] new system of warnings, that includes:
     - form "exists x, P -> Q", likely an error
     - unused bound logic variables in "forall", "exists" and "let"
  o [replayer] new option -q, for running quietly
  * [session] improved output of "why3session latex"; LaTeX macros have
    more arguments
  o [prover] support for Coq 8.4
  * [prover] dropped support for Coq 8.2
  o [prover] support for forthcoming PVS 6.0, including realizations
  o [prover] support for iProver and Zenon
  o [prover] new output scheme for Coq using type classes, to ensures
    types are inhabited
  * [driver] theory realizations now use meta "realized_theory" instead
    of "realized"
  * [config] modifiers in --extra-config are now called [prover_modifier]
    instead of just [prover]

version 0.73, Jul 19, 2012
==========================
  o [IDE] "Clean" was cleaning too much
  * no more executable why3ml (why3 now handles WhyML files)
  o [Provers] support for Z3 4.0
  o [Sessions] a small change in the format. Why3 is still able to
    read session files in the old format.
  o completed support for the "Out Of Memory" prover result
  o [Why3ml] new construct "abstract e { q }"
  o [Coq output] quotes in identifiers remain quotes in Coq
  o [Coq output] default tactic is now "intros ..." with a pattern
    that matches the structure of the goal