@@ -1,5 +1,6 @@
 * marks an incompatible change
 
+  o [prover] experimental support for SPASS >= 3.8 (with types)
   o [prover] support for Z3 4.3.*
   o [prover] fixed Coq 8.4 support for theory real.Trigonometry
   o [prover] support for CVC4
